--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,17 +3,42 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="stylesheet" href={{asset("css/headerFooterStyle.css")}} >
+        <link rel="stylesheet" href={{asset("css/reset.css")}} >
+        <link rel="stylesheet" href={{asset("css/homePage.css")}} >
+        <link rel="stylesheet" href={{asset("css/index.css")}} >
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+        <body>
+                <header class="">
+                    <ul class="menu-ul">
+                        <li class="links-menu"><a href="{{ path('app_home', {slut: 'Marcel-Pouvreau-portfolio'}) }}">Home</a></li>
+                        <li class="links-menu"><a href="{{ path('app_works')}}">Works</a></li>
+                        <li class="links-menu"><a href="#">Resume</a></li>
+                        <li class="links-menu"><a href="#">About me</a></li>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li class="links-menu"><a href="#">Logout</a></li>
+                            <li class="links-menu"><a href="{{ path('app_works_form')}}">AddWork</a></li>
+                        {% endif %}
+                    </ul>
+                </header>
+                {% block body %}
+
+                {% endblock %}                
+                <div class="footer-container">
+                        <a href="#">Contactez-moi</a>
+                        <p class="copyright">© Marcel Pouvreau, 2023</p>
+
+                    <div class="network-container">
+                        <a href="https://github.com/marcelpouvreau"><img class="icons" src="{{ asset ("images/github.png")}}" alt="Marcel Pouvreau github Link"></a>
+                        <a href="https://www.linkedin.com/in/marcel-pouvreau/"><img class="icons" src="{{ asset ("images/linkedin.png")}}" alt="Marcel Pouvreau linkedin Link"></a>
+                        <a href="https://www.instagram.com/marcelpouvreau/"><img class="icons" src="{{ asset ("images/instagram.png")}}" alt="Marcel Pouvreau Instagram Link"></a>
+                    </div>
+                </div>        
+        </body>
 </html>
