--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}POUVREAU Marcel Portfolio{% endblock %}
+{# {% block title %}POUVREAU Marcel Portfolio{% endblock %} #}
 
 {% block body %}
 
