--- a/templates/work/form.html.twig
+++ b/templates/work/form.html.twig
@@ -7,7 +7,7 @@
 <main class="work-container">
 
     {{ form_start(worksForm, {'attr': {'class': 'work-form'}}) }}
-    {{ form_row(worksForm.worksName, {'attr': {'class': 'work-name'}}) }}
+    {{ form_row(worksForm.name, {'attr': {'class': 'work-name'}}) }}
     {{ form_row(worksForm.url, {'attr': {'class': 'work-url'}}) }}
     {{ form_widget(worksForm.save, {'attr': {'class': 'button-save-work'}}) }}
     {{ form_end(worksForm) }}
