Third commit, css for the login form, contact. Creation of the skills page. Implementing the upload image function for each work.

--- a/public/css/headerFooterStyle.css
+++ b/public/css/headerFooterStyle.css
@@ -10,12 +10,14 @@
   margin-right: 5rem;
 }
 
-.links-menu {
+.header-links
+{
   background: #b49d7c;
-  padding: 10px 10px;
+  padding: 10px 15px;
   border-radius: 10px;
-  width: 90px;
-  text-align: center;
   font-size: 1.25rem;
+  width: 90px;
   font-weight: bold;
+  text-align: center;
+
 }
