--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,15 +8,15 @@
     <img src="{{ asset ("images/background.jpg")}}" alt="">
     <article class="home-article">
         <div class="text-main">
-            <h3>Qui suis-je</h3>
-            <p>Bonjour, je m'appelle Marcel POUVREAU et je suis développeur web.</p>
-            <p>Je suis à la recherche d'une première entreprise afin de continuer à monter en compétences.</p>
-            <p>Vous trouverez sur mon site mes réalisations, mon CV ainsi que mes différents profils sur les réseaux.</p>
+            <h3>Who am i?</h3>
+            <p>Hello, my name is Marcel Pouvreau and i am a web developper.</p>
+            <p>I am looking for a first company to continue to develop my skills</p>
+            <p>You will find on my website my archivements, my resume and my different profiles on the social network</p>
         </div>
 
         <div class="text-main">
-            <h3>Un peu plus a mon sujet</h3>
-            <p>Ayant fait une formation d’Architecture au Brésil, je suis venue m’installer en France en 2017. Après 4 ans travaillant dans le commerce, j’ai décidé de faire une reconversion professionnelle et j’ai démarré une formation autodidacte en Développement Web avant de valider mes compétences auprès d’un organisme de formation.</p>
+            <h3>A little more about me</h3>
+            <p>Having studied Architecture in Brasil, i came to settle in France in 2017. After 4 years working in commerce (sele of used cars), i decided to change and do a professional retraining. I started a self-thaught training in Web Development before start a training school.</p>
         </div>
     </article>
 </main>
