--- a/public/css/works.css
+++ b/public/css/works.css
@@ -1,3 +1,18 @@
+.container
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 85vh;
+}
+
+.works-container
+{
+  width: 300px;
+  height: 300px;
+}
+
 .btn-addNew-work
 {
   text-align: center;
@@ -10,16 +25,28 @@
   margin: 5rem;
 }
 
-.works-container
+.works-name-link
 {
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;  
 }
 
-.works-p
+.works-a, .works-p 
 {
+  color: black;
+  background: #ffff;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: .2rem;
+  margin-bottom: 10px;
   text-align: center;
+}
+
+.works-img
+{
+  width: 100%;
 }
 
 .options-container
