--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,15 +14,26 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <div class="login-container">
+        <h1 class="login-h1">Please sign in</h1>
+        <div class="login-inputs-container">
+            <div class="input-labels-login">
+                <label class="labels-login" class="" for="inputUsername">Username</label>
+                <input class="inputs-login" type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
+            </div>
+            <div class="input-labels-login">
+                <label class="labels-login" for="inputPassword">Password</label>
+                <input class="inputs-login" type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+            </div>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+            <input type="hidden" name="_csrf_token"
+                value="{{ csrf_token('authenticate') }}"
+            >
+        </div>
+        <button class="login-btn" type="submit">
+            Sign in
+        </button>
+    </div>
 
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -35,8 +46,5 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
 </form>
 {% endblock %}
